--- a/status_anzeigen.html
+++ b/status_anzeigen.html
@@ -30,7 +30,7 @@
         }
 
         .status-container h1 {
-            color: #3498db;
+            color: #3d5a80;
             margin-bottom: 20px;
         }
 
@@ -54,7 +54,7 @@
         .progress-bar span {
             display: block;
             height: 100%;
-            background: linear-gradient(to right, #3498db, #2980b9);
+            background: linear-gradient(to right, #3d5a80, #3d5a80);
             width: 0;
             border-radius: 5px;
             box-shadow: 0 0 5px rgba(52, 152, 219, 0.8);
@@ -71,7 +71,7 @@
         .cancel-button {
             margin-top: 20px;
             padding: 10px 20px;
-            background-color: #3498db;
+            background-color: #3d5a80;
             color: #fff;
             border: none;
             border-radius: 5px;
