allnew colors and some little tweaks

--- a/fehlerseite.html
+++ b/fehlerseite.html
@@ -3,17 +3,28 @@
 <head>
     <title>Fehlerseite</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
+    <body style="background-color: #c6ced4;">
     <div class="container">
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      Maximale Datiegröße erhöht und STEP-Dateisystem hinzugefügt.
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
         <h1 class="header">Fehler beim Hochladen der Datei</h1>
         <p>Es ist ein Fehler aufgetreten. Bitte überprüfen Sie Folgendes:</p>
         <ul>
-            <li>Die Datei darf nicht größer als 5 MB sein.</li>
-            <li>Wir akzeptieren die folgenden Dateiformate: STL, OBJ, GCODE.</li>
+            <li>Die Datei darf nicht größer als 15 MB sein.</li>
+            <li>Wir akzeptieren die folgenden Dateiformate: STL, OBJ, STEP.</li>
         </ul>
         <p>Stellen Sie sicher, dass Ihre Datei diese Anforderungen erfüllt, und versuchen Sie es erneut.</p>
         <a href="index.html" class="button">erneut versuchen</a>
     </div>
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
