--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
+    <body style="background-color: #c6ced4;">
   <div class="container">
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
       Die Seite ist noch in der Testphase!
@@ -54,6 +55,7 @@
     </form>
 
     <div class="footer">
+         <a href="https://github.com/Biospargel/3D-Printer-Cloud" class="footer-button">V1.1 (beta)</a>
       <a href="/impressum.html" class="footer-button">Impressum</a> 
       <a href="/datenschutz.html" class="footer-button">Datenschutz</a>
       <a href="/agb_datei1.html" class="footer-button">AGB's</a>
