--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   
   <div id="mySidepanel" class="sidepanel">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-    <a href="/dev.html">DEV</a>
-    <a href="/impressum.html">Impressum</a>
-    <a href="/datenschutz.html">Datenschutz</a>
-    <a href="/agb_datei1.html">AGB's</a>
+    <a href="dev.html">DEV</a>
+    <a href="impressum.html">Impressum</a>
+    <a href="datenschutz.html">Datenschutz</a>
+    <a href="agb_datei1.html">AGB's</a>
   </div>
 
   <div class="container">
