--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   
   <div id="mySidepanel" class="sidepanel">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-    <a href="dev.html">DEV</a>
-    <a href="impressum.html">Impressum</a>
-    <a href="datenschutz.html">Datenschutz</a>
-    <a href="agb_datei1.html">AGB's</a>
+    <a href="/3D-Printer-Cloud/dev.html">DEV</a>
+    <a href="/3D-Printer-Cloud/impressum.html">Impressum</a>
+    <a href="/3D-Printer-Cloud/datenschutz.html">Datenschutz</a>
+    <a href="/3D-Printer-Cloud/agb_datei1.html">AGB's</a>
   </div>
 
   <div class="container">
@@ -32,8 +32,8 @@
     </div>
 
     <h1 class="header">3D-Druck-Portal</h1>
-    <form id="uploadForm" action="upload.php" method="post" enctype="multipart/form-data">
-    <form id="uploadForm" action="upload.php" method="post" enctype="multipart/form-data">
+    <form id="uploadForm" action="/3D-Printer-Cloud/upload.php" method="post" enctype="multipart/form-data">
+    <form id="uploadForm" action="/3D-Printer-Cloud/upload.php" method="post" enctype="multipart/form-data">
       <label for="file" class="label">Wählen Sie eine 3D-Druckdatei (nicht slicen):</label><br>
       <input type="file" name="file" id="file" class="input"><br>
 
@@ -80,6 +80,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-  <script src="scripts.js"></script>
+  <script src="/3D-Printer-Cloud/scripts.js"></script>
 </body>
 </html>
